# ChangeLog for sys-libs/libstdc++-v3
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Feb 2010; Peter Hjalmarsson <xake@gentoo.org>
  libstdc++-v3-4.4.1.ebuild:
  This does not provide libstdc++.so.5

  01 Feb 2010; Peter Hjalmarsson <xake@gentoo.org>
  libstdc++-v3-3.3.6-r1.ebuild:
  Updated against portage, and removed unneeded "-j1"

  01 Feb 2010; Peter Hjalmarsson <xake@gentoo.org>
  -libstdc++-v3-3.3.6.ebuild:
  In portage

*libstdc++-v3-4.4.2 (18 Oct 2009)

  18 Oct 2009; Magnus Granberg <zorry@ume.nu> +libstdc++-v3-4.4.2.ebuild:
  New GCC (GCC 4.4.2) and we move from slot 5 to 6.

*libstdc++-v3-4.4.1 (04 Oct 2009)

  04 Oct 2009; Magnus Granberg <zorry@ume.nu>
  +files/libstdc++-v3-Makefile.in.patch, +libstdc++-v3-4.4.1.ebuild:
  Ebuild from bug #231870 and fix for SSP.

*libstdc++-v3-3.3.6-r1 (03 Oct 2009)

  03 Oct 2009; Magnus Granberg <zorry@ume.nu> +libstdc++-v3-3.3.6-r1.ebuild,
  +files/compile_with_no-SSP.patch:
  Will fix bug #285956

  06 Sep 2009; Magnus Granberg <zorry@ume.nu> -Manifest:
  Fix ticket #78 Thanks for testing blueness.
