@@ -8,6 +8,6 @@ DIST gcc-4.4.2-patches-1.0.tar.bz2 11040 RMD160 008701ce22ef001049871824528d193f
 DIST gcc-4.4.2.tar.bz2 62919816 RMD160 25014a64d148005868449dfebf91a734d6322227 SHA1 6cf7d9204ff3e1a09f4f12b1372cd4129ab7f080 SHA256 1126b6a7b585b3a178bfb7d559221779eb7eba12ce01bc9ca5896f6f9ee639de
 EBUILD libstdc++-v3-3.3.6-r1.ebuild 4922 RMD160 40eb33da610a5ba429f96e7df23d5611cbcf0338 SHA1 031f40db0737519a903859d3a4bace6902ccf521 SHA256 8d769e5b65ad4755d7d0365f90224fb18b5b9dfd563c949bb6560364a2522b52
 EBUILD libstdc++-v3-4.4.1.ebuild 2420 RMD160 540865cac9cde450a88ed2b475a1518a9f946a96 SHA1 25a0d31147c8828b91539a179ba64157c5168021 SHA256 f32cf0c9ca86d13cff96ae3ef9579a0363272e664af5d7ecde1da75f1c89bace
-EBUILD libstdc++-v3-4.4.2.ebuild 2507 RMD160 dd3cee361e97bace89abc8f776bc3800b454740b SHA1 6601cb109cc08868a37ec499dd7a1bf8454c2f6f SHA256 44e1db7c29a3fd90ffb60773568b4037c4c7fdef37b90ee69222d534e02d5088
-MISC ChangeLog 1110 RMD160 f56989a7c648e38b9ac273801c925de20c226c15 SHA1 89d42e74fd30b0585dcbc3d9fc0a655df2bd2e70 SHA256 bc81c30dbb72b98f978d91cf28511ffe506e8dd9bd7656e408f8a54ca9416e75
+EBUILD libstdc++-v3-4.4.2.ebuild 2499 RMD160 950d85cf866a19381c30808e6a37b404b5d5649b SHA1 349f865ce1180f4b2d52627fabbc331979bbe78e SHA256 7a474a1a59455bec7873a965f152199568afe98f109c62d175160cb8c0a8b1c5
+MISC ChangeLog 1226 RMD160 9ebe13eda49051491736a8755b847f9607fef3a3 SHA1 5def213039c014573db8ba40c751c21763257ecd SHA256 5d90b5c25b57b632becd05b234b48990c025503d1d52a1fe53c6987f0e7b0413
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
